<resources>
    <string name="app_name">Quản Lý Bán Hàng</string>
    <string name="appname">Quản Lý Nhân Viên</string>
    <string name="thongtin">Thông Tin Nhân Viên</string>
    <string name="thongke">Thống Kê</string>

    <string name="thongtinHoaDon">Thông Tin Hóa Đơn</string>
    <string name="thongtinChiTietHoaDon">Thông Tin Chi Tiết Hóa Đơn</string>
    <string name="thongtinSanPham">Thông Tin Sản Phẩm</string>

    <string name="hoTen">Nhập Mã Nhân Viên</string>
    <string name="ma">Nhập Tên Nhân Viên </string>
    <string name="diachi">Nhập Điện Thoại</string>
    <string name="chucnang">Chức Năng</string>

    <!--    chi tiet hoa don-->
    <string name="maSP">Nhập mã sản phẩm</string>
    <string name="soluongSP">Nhập số lượng sản phẩm</string>
    <string name="danhSachChiTietHD">Danh Sách Chi Tiết Hóa Đơn</string>

    <!--    san pham-->
    <string name="danhSachSP">Danh Sách Sản Phẩm</string>
    <string name="tenSP">Tên sản phẩm</string>
    <string name="donviTinhSP">Đơn vị tính</string>
    <string name="donGiaSP">Đơn giá</string>

    <string name="them">Thêm</string>
    <string name="xoa">Xóa</string>
    <string name="sua">Sửa</string>
    <string name="clean">Làm Mới</string>
    <string name="thoat">Thoát</string>

    <string name="ngayLapHD">Nhập ngày lập hóa đơn</string>

    <string name="maHD">Nhập mã hóa đơn </string>

    <string name="maNhanVien">Nhập mã nhân viên</string>

    <string name="thongtin1"> Thông Tin Thuốc </string>
    <string name="dsHoaDon">Danh Hóa Đơn </string>

    <string name="ds">Danh Sách Nhân Viên </string>
    <string name="qltiemthuoc">Nhân Viên</string>
    <string name="qlthuoc">Hóa Đơn</string>
    <string name="cthoadon">Chi Tiết Hóa Đơn</string>
    <string name="sanpham">Sản Phẩm</string>


    <string name="nam">Nam</string>
    <string name="nu">Nữ</string>

</resources>
