<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GiaoDien.MainActivityNhanVien">
    <include layout="@layout/layout_back"/>
    <TextView
        style="@style/tieude"
        android:text="@string/thongtinSanPham" />




    <EditText
        android:id="@+id/txtMaSP"
        style="@style/txt"
        android:hint="@string/maSP" />

    <EditText
        android:id="@+id/txtTenSP"
        style="@style/txt"
        android:hint="@string/tenSP" />

    <EditText
        android:id="@+id/txtDonViSP"
        style="@style/txt"
        android:hint="@string/donviTinhSP" />
    <EditText
        android:id="@+id/txtDonGiaSP"
        style="@style/txt"
        android:hint="@string/donGiaSP" />



    <TextView
        style="@style/tieude"
        android:text="@string/chucnang" />

    <LinearLayout style="@style/chucnang">

        <Button
            android:id="@+id/btnThemSP"
            style="@style/btn"
            android:background="@drawable/them"
            android:text="@string/them" />

        <Button
            android:id="@+id/btnxoaSP"
            style="@style/btn"
            android:background="@drawable/xoa"
            android:text="@string/xoa" />

        <Button
            android:id="@+id/btnsuaSP"
            style="@style/btn"
            android:background="@drawable/sua"

            android:text="@string/sua" />

        <Button
            android:id="@+id/btncleanSP"
            style="@style/btn"
            android:background="@drawable/xoa"
            android:text="@string/clean" />


    </LinearLayout>

    <TextView
        style="@style/tieude"
        android:text="@string/danhSachSP" />
    <ListView
        android:id="@+id/lvDanhSachSP"
        style="@style/lv"></ListView>

</LinearLayout>