<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GiaoDien.MainHoaDon">
    <include layout="@layout/layout_back"/>


    <TextView
        style="@style/tieude"
        android:text="@string/thongtinHoaDon" />

    <EditText
        android:id="@+id/txtMaHoaDon"
        style="@style/txt"
        android:hint="@string/maHD" />

    <EditText
        android:id="@+id/txtNgayLapHD"
        style="@style/txt"
        android:hint="@string/ngayLapHD" />

    <EditText
        android:id="@+id/txtMaNVHD"
        style="@style/txt"
        android:hint="@string/maNhanVien" />

    <TextView
        style="@style/tieude"
        android:text="@string/chucnang" />


    <LinearLayout style="@style/chucnang">

        <Button
            android:id="@+id/btnThemHD"
            style="@style/btn"
            android:background="@drawable/them"
            android:text="@string/them" />

        <Button
            android:id="@+id/btnxoaHD"
            style="@style/btn"
            android:background="@drawable/xoa"
            android:text="@string/xoa" />

        <Button
            android:id="@+id/btnsuaHD"
            style="@style/btn"
            android:background="@drawable/sua"

            android:text="@string/sua" />

        <Button
            android:id="@+id/btncleanHD"
            style="@style/btn"
            android:background="@drawable/xoa"
            android:text="@string/clean" />


    </LinearLayout>

    <TextView
        style="@style/tieude"
        android:text="@string/dsHoaDon" />
    <ListView
        android:id="@+id/lvDanhSachHD"
        style="@style/lv"></ListView>

</LinearLayout>