<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GiaoDien.MainActivityNhanVien">
    <include layout="@layout/layout_back"/>
    <TextView
        style="@style/tieude"
        android:text="@string/thongtinChiTietHoaDon" />




    <EditText
        android:id="@+id/txtMaHDCT"
        style="@style/txt"
        android:hint="@string/maHD" />

    <EditText
        android:id="@+id/txtMaSPCT"
        style="@style/txt"
        android:hint="@string/maSP" />

    <EditText
        android:id="@+id/txtSoLuongSPCT"
        style="@style/txt"
        android:hint="@string/soluongSP" />


    <TextView
        style="@style/tieude"
        android:text="@string/chucnang" />

    <LinearLayout style="@style/chucnang">

        <Button
            android:id="@+id/btnThemCT"
            style="@style/btn"
            android:background="@drawable/them"
            android:text="@string/them" />

        <Button
            android:id="@+id/btnxoaCT"
            style="@style/btn"
            android:background="@drawable/xoa"
            android:text="@string/xoa" />

        <Button
            android:id="@+id/btnsuaCT"
            style="@style/btn"
            android:background="@drawable/sua"

            android:text="@string/sua" />

        <Button
            android:id="@+id/btncleanCT"
            style="@style/btn"
            android:background="@drawable/xoa"
            android:text="@string/clean" />


    </LinearLayout>

    <TextView
        style="@style/tieude"
        android:text="@string/danhSachChiTietHD" />
    <ListView
        android:id="@+id/lvDanhSachChiTietHD"
        style="@style/lv"></ListView>

</LinearLayout>