<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.quanly.GiaoDien.MainActivityTrangChu"
    tools:ignore="MissingDefaultResource">




    <TextView
        style="@style/tieude"
        android:text="Hệ thống"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        />

    <LinearLayout
        style="@style/chucnang"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnTrangNhanVien"
            style="@style/btnchuyentrang"
            android:layout_width="200dp"
            android:layout_height="79dp"
            android:text="@string/qltiemthuoc" />

        <Button
            android:id="@+id/btnTrangHoaDon"
            style="@style/btnchuyentrang"
            android:layout_width="200dp"
            android:layout_height="79dp"
            android:text="@string/qlthuoc" />
        <Button
            android:id="@+id/btnTrangChiTietHD"
            style="@style/btnchuyentrang"
            android:layout_width="200dp"
            android:layout_height="79dp"
            android:text="@string/cthoadon" />
        <Button
            android:id="@+id/btnTrangSanPham"
            style="@style/btnchuyentrang"
            android:layout_width="200dp"
            android:layout_height="79dp"
            android:text="@string/sanpham" />
    </LinearLayout>

    <TextView
        style="@style/tieude1"
        android:layout_height="53dp"
        android:text="Chất Lượng"
        android:layout_marginTop="20dp"/>

    <LinearLayout style="@style/chucnang">




        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="67dp"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/btn_star_big_on" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="67dp"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/btn_star_big_on" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="67dp"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/btn_star_big_on" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="67dp"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/btn_star_big_on" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="67dp"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/btn_star_big_on" />
    </LinearLayout>

</LinearLayout>